# Detailed-routing

./: CMakeLists.txt  Lab4  Makefile  README.md  output.txt
data/: case11.txt  case12.txt
examples/: CMakeLists.txt  example_lab4.cpp
scripts/: boost.sh  draw.py
src/routing/: CMakeLists.txt  Lab4.hpp  greedy_channel_router.hpp  input.hpp  system.hpp
